# transfer-shot

./: .gitignore  LICENSE  README.md  cpu_venv_setup.sh  mismatch_finder.py  pyproject.toml  requirements.txt
processing/: README.md  extract_atoms_from_json.py  mismatch_finder.py  requirements.txt  subset_json.py  uma_relax.py
src/trot/: __main__.py  config.py  coverage.py  dataset.py  evaluate.py  experiments.py  model.py  pretrained_models.py  processing.py  visualize.py
